cabal-version:      2.4
name:               seven-guis-vty
version:            0.2.0.0
synopsis:           7GUIs counter in reflex-vty
description:        Implementation of the 7GUIs counter in reflex-vty
homepage:           https://github.com/obsidiansystems/seven-guis-vty
bug-reports:        https://github.com/obsidiansystems/seven-guis-vty/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2022 Obsidian Systems LLC
category:           GUI
extra-source-files: images/counter/*.png
                    images/temperature/*.png
                    LICENSE
                    *.md

executable seven-guis-vty-counter
    main-is:          1_Counter.lhs
    default-extensions:
      OverloadedStrings
      RecursiveDo
      LambdaCase
    build-depends:    base >= 4.10 && < 4.16
                    , reflex >= 0.8 && < 0.9
                    , reflex-vty >= 0.3.1.0 && < 0.4
                    , text >= 1.2.3 && < 1.3
                    , vty >= 5.28 && < 5.37
    default-language: Haskell2010
    ghc-options: -pgmL markdown-unlit -Wall -threaded
    build-tool-depends: markdown-unlit:markdown-unlit -any

executable seven-guis-vty-temperature-converter
    main-is:          2_Temperature.lhs
    default-extensions:
      OverloadedStrings
      RecursiveDo
      LambdaCase
      ScopedTypeVariables
    build-depends:    base
                    , reflex
                    , reflex-vty
                    , text
                    , vty
    default-language: Haskell2010
    ghc-options: -pgmL markdown-unlit -Wall -threaded
    build-tool-depends: markdown-unlit:markdown-unlit -any

source-repository head
  type: git
  location: https://github.com/obsidiansystems/seven-guis-vty
